# analyst_agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MULTI_PROVIDER_GUIDE.md  NEXT_STEPS.md  QUICK_START_NEW_SYSTEM.md  README.md  TEST_FRONTEND.md  check_dependencies.py  docker-compose.yml  init-db.sql  main.py  package.json  pyproject.toml  run.py  setup_test_db.py  start_demo.sh  test_setup.py  test_streaming.py
.github/workflows/: main_testaiapp.yml
analyst_agent/: __init__.py  schemas.py  settings.py
analyst_agent/adapters/: __init__.py  base.py  registry.py  sqlalchemy_connector.py  supabase_connector.py
analyst_agent/agents/: __init__.py  agent_registry.py  analysis_agent.py  dynamic_coordinator.py
analyst_agent/analysis/: __init__.py
analyst_agent/api/: __init__.py  app.py
analyst_agent/api/routes/: __init__.py  analysis.py  health.py
analyst_agent/core/: __init__.py  dialect_caps.py  graph.py  llm_factory.py  nodes.py  rls_manager.py  sql_executor.py  state.py
analyst_agent/data_sources/: __init__.py
analyst_agent/models/: __init__.py  contracts.py
analyst_agent/sandbox/: __init__.py
deepagents/examples/text-to-sql-agent/: AGENTS.md
deepagents/examples/text-to-sql-agent/skills/query-writing/: SKILL.md
deepagents/examples/text-to-sql-agent/skills/schema-exploration/: SKILL.md
examples/: basic_test.py  multi_provider_test.py  new_system_test.py  sample_data.sql  sample_sales.csv  test_agent.py  typescript_example.js
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/styles/: main.css
scripts/: check_venv.sh
tests/: __init__.py
typescript-sdk/: README.md  package.json  tsconfig.json  tsup.config.ts
typescript-sdk/src/: client.ts  index.ts  simple-client.ts  types.ts
