[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyst-agent"
version = "0.1.0"
description = "Autonomous AI data analyst/scientist service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rohan N", email = "nrohan09@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # LangChain/LangGraph for agentic workflows
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.10",
    
    # Data processing and analysis
    "pandas>=2.1.0",
    "polars>=0.19.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    
    # Database and data sources
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "snowflake-connector-python>=3.5.0",
    "mysql-connector-python>=8.2.0",
    "pyodbc>=5.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    
    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Security and authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # for testing FastAPI
    
    # Development tools
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/analyst-agent"
Documentation = "https://github.com/yourusername/analyst-agent#readme"
Repository = "https://github.com/yourusername/analyst-agent.git"
Issues = "https://github.com/yourusername/analyst-agent/issues"

[project.scripts]
analyst-agent = "analyst_agent.main:main"

[tool.hatch.version]
path = "analyst_agent/__init__.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=analyst_agent --cov-report=term-missing"
asyncio_mode = "auto" 